<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="wrap_content"
	    android:id="@+id/setting_view"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left">

   <!--      <CheckBox
            android:id="@+id/reboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reboot_test" />
        
         <CheckBox
            android:id="@+id/sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_test" />
        
        <CheckBox
            android:id="@+id/vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate_test" />

	    <CheckBox
	        android:id="@+id/receiver"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/receiver_test" />

	    <CheckBox android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:id="@+id/taking"
	        android:text="@string/taking_picture_test"/>

	    <CheckBox
	        android:id="@+id/video"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/play_video_test" />

	    <CheckBox
	        android:id="@+id/batterycb"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/battery_test" />
	 
	    <CheckBox
	        android:id="@+id/iscirculation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/is_circulation" />
 -->
 
 		 <CheckBox
	        android:id="@+id/video"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/play_video_test" />
 		 
 		 <CheckBox 
 		     android:id="@+id/play_3d"
 		     android:layout_width="wrap_content"
 		     android:layout_height="wrap_content"
 		     android:text="@string/play3D"		    
 		     />
 		 
 		 <CheckBox 
 		     android:id="@+id/lcd_vibrate"
 		     android:layout_width="wrap_content"
 		     android:layout_height="wrap_content"
 		     android:text="@string/lcd_vibrate"
 		     />
 		 
 		  <CheckBox 
 		     android:id="@+id/spk"
 		     android:layout_width="wrap_content"
 		     android:layout_height="wrap_content"
 		     android:text="@string/spk"
 		     />
 		  
 		  <CheckBox 
 		     android:id="@+id/mic_receiver"
 		     android:layout_width="wrap_content"
 		     android:layout_height="wrap_content"
 		     android:text="@string/mic_receiver"
 		     />
   
 		    <CheckBox 
 		     android:id="@+id/camera"
 		     android:layout_width="wrap_content"
 		     android:layout_height="wrap_content"
 		     android:text="@string/camera"
 		     />
 		    
 		    <CheckBox
            android:id="@+id/reboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reboot_test" 
            />
 		    
 		    <CheckBox
	        android:id="@+id/iscirculation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/is_circulation" />
    </LinearLayout>
    
        <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="horizontal"
        >
		    <Button
		        android:id="@+id/start"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/button_start" />
		    <Button
		        android:id="@+id/stop"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/button_stop" />
	    </LinearLayout>
    
</LinearLayout>
