<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/time_setting_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/video_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/play_video_test"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/video_time_Edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/default_time"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/play_3d_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/play3D"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/play_3d_time_Edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/default_time"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lcd_vibrate_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/lcd_vibrate"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/lcd_vibrate_time_Edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/default_time"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/spk_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/spk"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/spk_time_Edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/default_time"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/mic_receiver_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/mic_receiver"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/mic_receiver_time_Edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/default_time"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/camera_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/camera"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/camera_time_Edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/default_time"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>
        
           <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/reboot_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/reboot_test"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/reboot_time_Edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/default_time"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/ok"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_ok" />

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />
    </LinearLayout>

</LinearLayout>